line-height: 2em; for page-navigation-container (fix vertical-align issue)

--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ pre.highlight code,
   float: left;
   width: 50%;
   height: 2em;
+  line-height: 2em;
   padding: 0;
   margin: 0;
 }
